--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,9 +12,9 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "/Users/steven/Main/Classes/ChipSat/DeScent/.pio/build/oopchipsat/firmware.elf",
-            "projectEnvName": "oopchipsat",
-            "toolchainBinDir": "/Users/steven/.platformio/packages/toolchain-atmelavr/bin",
+            "executable": "/Users/benjaminzou/Desktop/CornellProjects/descent/DeScent/.pio/build/verbose/firmware.elf",
+            "projectEnvName": "verbose",
+            "toolchainBinDir": "/Users/benjaminzou/.platformio/packages/toolchain-atmelavr/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "preLaunchTask": {
                 "type": "PlatformIO",
@@ -25,18 +25,18 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "/Users/steven/Main/Classes/ChipSat/DeScent/.pio/build/oopchipsat/firmware.elf",
-            "projectEnvName": "oopchipsat",
-            "toolchainBinDir": "/Users/steven/.platformio/packages/toolchain-atmelavr/bin",
+            "executable": "/Users/benjaminzou/Desktop/CornellProjects/descent/DeScent/.pio/build/verbose/firmware.elf",
+            "projectEnvName": "verbose",
+            "toolchainBinDir": "/Users/benjaminzou/.platformio/packages/toolchain-atmelavr/bin",
             "internalConsoleOptions": "openOnSessionStart"
         },
         {
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "/Users/steven/Main/Classes/ChipSat/DeScent/.pio/build/oopchipsat/firmware.elf",
-            "projectEnvName": "oopchipsat",
-            "toolchainBinDir": "/Users/steven/.platformio/packages/toolchain-atmelavr/bin",
+            "executable": "/Users/benjaminzou/Desktop/CornellProjects/descent/DeScent/.pio/build/verbose/firmware.elf",
+            "projectEnvName": "verbose",
+            "toolchainBinDir": "/Users/benjaminzou/.platformio/packages/toolchain-atmelavr/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "loadMode": "manual"
         }
