--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,13 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:oopchipsat]
+[env]
 platform = atmelavr
 board = ATmega328P
 framework = arduino
-debug_build_flags = -Os
-; lib_deps = sandeepmistry/LoRa@^0.8.0
+
+; [env:oopchipsat]
+; debug_build_flags = -Os
+
+[env:verbose]
+build_flags = -D VERBOSE
